@@ -51,6 +51,7 @@
         <logback-version>1.4.12</logback-version>
         <logcaptor-version>2.2.0</logcaptor-version>
         <junit-version>5.10.2</junit-version>
+        <mockito-version>5.11.0</mockito-version>
         <apache-commons-codec-version>1.15</apache-commons-codec-version>
         <sun-xml-sercurity-version>1.0</sun-xml-sercurity-version>
 
@@ -108,6 +109,12 @@
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -143,6 +150,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                     <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
